# Rubix

./: .gitignore  CLManager.cpp  CLManager.h  CMakeLists.txt  Compute_Object.cpp  Compute_Object.h  DirectCompute_Manager.cpp  DirectCompute_Manager.h  Dtype.h  Exceptions.cpp  LogHandler.cpp  LogHandler.h  Matrix.cpp  Matrix.h  MatrixLayout.h  MatrixStorage.cpp  MatrixStorage.h  Matrix_Add_Kernels.cl  Matrix_Div_Kernels.cl  Matrix_Mult_Kernels.cl  Matrix_Subtr_Kernels.cl  Ops_Matrix.cpp  Ops_Matrix.h  Rubix.sln  Rubix.vcxproj  Rubix.vcxproj.filters  RubixMain.cpp  RubixMain.h  ThreadWrap.cpp  ThreadWrap.h  resource.h
DataStructureInitTests/: DataStructureInitTests.cpp  DataStructureInitTests.vcxproj  DataStructureInitTests.vcxproj.filters
Matrix_Addition_Test/: Matrix_Add.cpp  Matrix_Addition_Test.vcxproj  Matrix_Addition_Test.vcxproj.filters
Rubix/Matrix_Lifecycle_mv_cp_Test/: Matrix_Lifecycle_mv_cp_Test.cpp  Matrix_Lifecycle_mv_cp_Test.vcxproj  Matrix_Lifecycle_mv_cp_Test.vcxproj.filters
RubixDXCompute/: DirectCompute_Manager.cpp  DirectCompute_Manager.h
RubixLogSys/: Exceptions.h  LogHandler.cpp  LogHandler.h
RubixMatrix/: Dtype.h  Matrix.cpp  Matrix.h  MatrixMemory.cpp  MatrixMemory.h  MatrixStorage.cpp  MatrixStorage.h
RubixShaders/MatrixOperations/: MatrixAdd.hlsl  MatrixSubtr.hlsl
Unit_Test_Matrix_Lifecycle/: Testctors.cpp  Unit_Test_Matrix_Lifecycle.vcxproj  Unit_Test_Matrix_Lifecycle.vcxproj.filters
